welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: not found: value estFaceBlue
while (estFaceBlue==false) {
       ^