welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
while (estFaceBlue==false) {
	avance()

}
gauche()
avance(2)
droite()